# cinema

./: pyproject.toml
server/: .env  settings.py  urls.py
server/apps/accounts/: models.py
server/apps/accounts/migrations/: 0001_initial.py
server/apps/bookings/: apps.py  models.py  urls.py  views.py
server/apps/bookings/migrations/: 0001_initial.py
server/apps/movies/: apps.py  forms.py  models.py  urls.py  views.py
server/apps/movies/migrations/: 0001_initial.py
server/apps/movies/templates/: create_movie.html  delete_movie.html  movie_detail.html  movie_list.html
